k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-food-consumer-deployment
  labels:
    app: fast-food-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fast-food-consumer
  template:
    metadata:
      name: fast-food-consumer
      labels:
        app: fast-food-consumer
    spec:
      serviceAccountName: fast-food-consumer-sa
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 8.8.8.8     # Google DNS
          - 1.1.1.1     # Cloudflare DNS
      containers:
        - name: fast-food-consumer
          image: 897722698720.dkr.ecr.us-east-1.amazonaws.com/fast-food-consumer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "800Mi"
              cpu: "700m"
            limits:
              memory: "800Mi"
              cpu: "700m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
      restartPolicy: Always
