k8s/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fast-food-consumer-svc
spec:
  selector:
    app: fast-food-consumer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
